<resources>
    <string name="app_name">SmartMobUCE</string>
    <string name="action_settings">About</string>
    <string name="action_sync">Synchronize</string>
    <string name="author">Produced by Henry Guamán</string>
    <string name="authenticate">Authenticating...</string>
    <string name="success">Login Successful</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="unregistered">Unregistered user or not active account</string>
    <string name="error_login">Login failed</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short between 4 and 10 alphanumeric characters</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Account created</string>
    <string name="renterpwd">Re-enter Password</string>
    <string name="error_invalid_password_match">Password Do not match</string>
    <string name="year">Year</string>
    <string name="re_year">Enter the year</string>
    <string name="re_year_valid">Enter the valid year</string>
    <string name="reaccount">No account yet? Create one</string>
    <string name="recrea">Create Account</string>
    <string name="recrea1">Creating Account...</string>
    <string name="error_create_user">Create user failed</string>
    <string name="realready">Already a member? Login</string>
    <string name="all_types">Studies,Sport,Work,Other</string>
    <string name="error" translatable="false">Error</string>
    <string name="select_faculty">Select Faculty</string>
    <string name="select_gender">Select Gender</string>
    <string name="select_type">Select Type</string>
    <string name="select_sector">Select Sector</string>
    <string name="select_activity">Select Activity</string>
    <string name="Acuerdo">Terms and Conditions</string>
    <string name="lectura_acuerdo">I read the agreement</string>
    <string name="check">Check agreement</string>
    <string name="Accept">Accept</string>
    <string name="Cancel">Cancel</string>
    <string name="faculty">Faculty</string>
    <string name="fac2">Administrative Sciences</string>
    <string name="fac3">Agricultural Science</string>
    <string name="fac4">Architecture and Urbanism</string>
    <string name="fac5">Arts</string>
    <string name="fac6">Biological Sciences</string>
    <string name="fac7">Chemical Engineering</string>
    <string name="fac8">Chemical Sciences</string>
    <string name="fac9">Disability Sciences</string>
    <string name="fac10">Economic Sciences</string>
    <string name="fac11">Engineering in Geology, Mining, Petroleum and Environmental</string>
    <string name="fac12">Engineering, Physical Sciences and Mathematics</string>
    <string name="fac13">Jurisprudence, Political and Social Sciences</string>
    <string name="fac14">Medical Sciences</string>
    <string name="fac15">Odontology</string>
    <string name="fac16">Philosophy, Letters and Education Sciences</string>
    <string name="fac17">Physical Culture</string>
    <string name="fac18">Psychological Sciences</string>
    <string name="fac19">Social and Human Sciences</string>
    <string name="fac20">Social Comunication</string>
    <string name="fac21">Veterinary Medicine</string>
    <string name="gender">Gender</string>
    <string name="g01">Male</string>
    <string name="g02">Female</string>
    <string name="type">Type</string>
    <string name="t01">Student</string>
    <string name="t02">Theacher</string>
    <string name="t03">Administrative</string>
    <string-array name="sector">
        <item>@string/sector</item>
        <item>@string/s01</item>
        <item>@string/s02</item>
        <item>@string/s03</item>
        <item>@string/s04</item>
    </string-array>
    <string name="s01">North</string>
    <string name="s02">Center</string>
    <string name="s03">South</string>
    <string name="s04">Valleys</string>
    <string name="activity">Activity</string>
    <string name="a01">Studies</string>
    <string name="a02">Sport</string>
    <string name="a03">Work</string>
    <string name="a04">Other</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="accuracy">Accuracy</string>
    <string name="altitude">Altitude</string>
    <string name="speed">Speed</string>
    <string name="provider">Provider</string>
    <string name="date">Date</string>
    <string name="marca">Manufactured</string>
    <string name="model">Model</string>
    <string name="db_synchronization">DB Synchronization completed!!</string>
    <string name="error_synchronization">Error Occurred [Server JSON request possibly invalidates]!</string>
    <string name="error_request">Request for the resource not found</string>
    <string name="error_server">Something may have happened on the server</string>
    <string name="error_server1">Unexpected error has occurred! [Most common error: could the device is not connected to the Internet or could not find the service]</string>
    <string name="error1_db_synchronization">SQLite and Remote MySQL DBs are Synchronized!!</string>
    <string name="error2_db_synchronization">No data in SQLite DB,please wait for the action of Synchronization!</string>
    <string-array name="genero">
        <item>@string/gender</item>
        <item>@string/g01</item>
        <item>@string/g02</item>
    </string-array>
    <string-array name="facultad">
        <item>@string/faculty</item>
        <item>@string/fac2</item>
        <item>@string/fac3</item>
        <item>@string/fac4</item>
        <item>@string/fac5</item>
        <item>@string/fac6</item>
        <item>@string/fac7</item>
        <item>@string/fac8</item>
        <item>@string/fac9</item>
        <item>@string/fac10</item>
        <item>@string/fac11</item>
        <item>@string/fac12</item>
        <item>@string/fac13</item>
        <item>@string/fac14</item>
        <item>@string/fac15</item>
        <item>@string/fac16</item>
        <item>@string/fac17</item>
        <item>@string/fac18</item>
        <item>@string/fac19</item>
        <item>@string/fac20</item>
        <item>@string/fac21</item>
    </string-array>
    <string-array name="tipo">
        <item>@string/type</item>
        <item>@string/t01</item>
        <item>@string/t02</item>
        <item>@string/t03</item>
    </string-array>
    <string-array name="actividad">
        <item>@string/a01</item>
        <item>@string/a02</item>
        <item>@string/a03</item>
        <item>@string/a04</item>
    </string-array>
    <string name="Terminos1">Last revision: September 13, 2018  \n
        This contract describes the general terms and conditions
        applicable to the use of the services offered by SmartMobUCE through https://gmoncayoresearch.com/smartmobuce1/acuerdo.html (hereinafter \"the application\" or \"SmartMobUCE\").
        Any person (hereinafter \"User\") who wishes to use or use the SmartMobUCE application or the Services may do so subject to the respective General Terms and Conditions.
        Anyone who does not accept these terms and conditions, which are mandatory and binding, can not use the application and / or services.
        The User must read, understand and accept all the conditions established in the General Terms and Conditions prior to registering as User of the application.
        SmartMobUCE may modify the General Terms and Conditions at any time by making public on the website http://gmoncayoresearch.com/smartmobuce/acuerdo.html the modified terms.\n
        </string>
    <string name="Terminos2">Users</string>
    <string name="Terminos3">The Services are only available to people who have the legal capacity to contract.
        The services and / or the application may not be used by persons who do not have that capacity, minors or Users of the application who have been temporarily or indefinitely suspended.
        The user acknowledges being over 18 years of age when he / she signs up to use the application\n
        </string>
    <string name="Terminos4">The service</string>
    <string name="Terminos5">The service offered by SmartMobUCE through the application is free, but SmartMobUCE reserves the right to implement new services to users, free or Payments.
        SmartMobUCE reserves the right to disable or suspend users of the application, without being obliged to communicate or explain the reasons for its decision and without generating any right to compensation or compensation.
        Without prejudice to other measures, SmartMobUCE may warn, temporarily suspend or disable a User or a publication, initiate the actions it deems appropriate and / or suspend the provision of its Services if:\n
        (1)Any law, or any of the stipulations of the General Terms and Conditions will be violated;\n
        (2)If you breach your commitments as a User;\n
        (3)If it is incurred, at the discretion of SmartMobUCE, in fraudulent or fraudulent behavior or acts;\n
        (4)The identity of the User or any information provided by the User could not be verified erroneously;\n
    </string>
    <string name="Terminos6">The use of the service </string>
    <string name="Terminos7">A journey in which service users can not hold SmartMobUCE responsible. Neither SmartMobUCE will be responsible for the mobility conditions of the users, in any way whatsoever: the service provided by SmartMobUCE through the application is only as a statistical means.
        SmartMobUCE does not assume the realization, ownership, or responsibility of the provision of the services that it intermediates, neither in front of the users of the same, nor in front of third parties.\n
    </string>
    <string name="Terminos8">Interruptions and failures of the service</string>
    <string name="Terminos9">SmartMobUCE is part of a research project and in this phase its permanence in the application and web access will be for approximately 15 days for piloting purposes of the application, within this trial period it may happen that access to the web or to the service is interrupted in the course of maintenance operations, hardware and software updates, emergency repairs of the web, or due to circumstances beyond the control of SmartMobUCE (such as Internet failure).
        That is why SmartMobUCE does not guarantee access and continued or uninterrupted use of your site. The Users acknowledge and accept that SmartMobUCE does not assume any liability towards him for any lack, suspension or interruption of the web or of the service.
        SmartMobUCE is not responsible for any damage, loss or loss to the User caused by failures in the system, on the server or on the Internet. SmartMobUCE will not be responsible for any virus that could infect the Users\' equipment as a result of access, use or examination of its website or as a result of any transfer of data, files, images, texts, or audio contained in it.
        The Users can not impute to SmartMobUCE any responsibility or demand payment for lost profits, due to damages resulting from technical difficulties or failures in the systems or on the Internet.\n
        </string>
    <string name="Terminos10">System violations</string>
</resources>