<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="1800dp"
                android:background="@color/primary_darker"
                android:text="@string/Terminos"
                android:textColor="@color/accent"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/checkBox_acuerdo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/lectura_acuerdo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_aceptar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Accept" />

                <Button
                    android:id="@+id/button_cancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Cancel" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
